--- a/src/server/templates/ok.ejs
+++ b/src/server/templates/ok.ejs
@@ -17,7 +17,7 @@
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"><%- body -%></div>
+  <div id="root" />
   <script>
     window.data=<%- data -%>;
     window.config=<%- config -%>;
